[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "api-tester-ai-mcp"
version = "1.0.0"
description = "MCP server for api tester ai. Features send request, validate response, check headers. From MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "api", "tester"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/api-tester-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
api_tester_ai_mcp = "server:main"
